# llm

./: Dockerfile  Makefile  README.md  docker-compose.yml  example.js  pyproject.toml  src.md
.github/workflows/: ci.yml
ansible/playbooks/: deploy.yml  test-mcp.yml  test-rest.yml  test-shell.yml
ansible/roles/ollama-deploy/tasks/: main.yml
ansible/roles/ollama-deploy/templates/: env.j2  ollama-client.service.j2
docs/: README.md  mcp-integration.md
docs/features/: core-client.md
docs/getting-started/: installation.md  quickstart.md
ollama_client/: main.py
ollama_client/core/: client.py  exceptions.py  models.py
ollama_client/interfaces/mcp/: adapter.py  handlers.py
ollama_client/interfaces/rest/: app.py  openapi.py  routes.py  schemas.py
ollama_client/interfaces/shell/: cli.py  interactive.py
ollama_client/utils/: config.py
tests/: test_client.py  test_mcp.py  test_rest_api.py  test_shell.py
