[tool.poetry]
name = "ollama-client"
version = "0.1.0"
description = "Client library for Ollama with multiple interfaces"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ollama_client"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
pydantic = "^2.6.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
typer = "^0.9.0"
rich = "^13.7.0"
websockets = "^12.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.15"

[tool.poetry.scripts]
ollama-shell = "ollama_client.interfaces.shell.interactive:app"
ollama-api = "ollama_client.interfaces.rest.app:start"
ollama-mcp = "ollama_client.interfaces.mcp.adapter:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 88
target-version = "py310"